# angkorime

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  LICENSE  Makefile  README.md  build.rs  requirements.txt
.claude/commands/: tsf.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: golden-change-proposal.yml
.github/workflows/: workspace-ci.yml
adapters/android-ime/: Cargo.toml  README.md
adapters/android-ime/src/: lib.rs
adapters/ios-keyboard/: Cargo.toml  README.md
adapters/ios-keyboard/src/: lib.rs
adapters/linux-ibus/: Cargo.toml  README.md
adapters/linux-ibus/python/: ibus_bridge_client.py  ibus_candidate_render.py  ibus_component.py  ibus_refinement.py  ibus_segment_preview.py  ibus_segmented_preview.py  khmerime_ibus_engine.py
adapters/linux-ibus/src/: history_store.rs  lib.rs
adapters/linux-ibus/tests/: ibus_bridge_protocol.rs
adapters/macos-imk/: Cargo.toml  README.md
adapters/macos-imk/src/: lib.rs
adapters/windows-tsf/: Cargo.toml  README.md
adapters/windows-tsf/src/: diagnostics.rs  history.rs  lib.rs  session_driver.rs
adapters/windows-tsf/src/com/: class_factory.rs  dll_module.rs  mod.rs  registration.rs  text_service.rs
adapters/windows-tsf/src/input/: key_convert.rs  mod.rs
adapters/windows-tsf/src/render/: mod.rs  render_state.rs
adapters/windows-tsf/src/tsf/: candidates.rs  composition.rs  display_attributes.rs  edit_session.rs  key_event_sink.rs  mod.rs  thread_context.rs
apps/dioxus-app/: Cargo.toml  Dioxus.toml  README.md
apps/dioxus-app/src/: engine_registry.rs  main.rs  startup_fetch.rs  startup_signals.rs
apps/dioxus-app/src/ui/: editor.rs  mod.rs  shadow.rs  storage.rs
apps/dioxus-app/src/ui/components/: guide.rs  mod.rs  toolbar.rs
apps/dioxus-app/src/ui/editor/: candidate_pipeline.rs  segmented_flow.rs  state.rs
apps/lookup-cli/: Cargo.toml  README.md
apps/lookup-cli/src/: main.rs
assets/: main.css  web_preboot_body.html  web_preboot_head.html
assets/css/: 00-tokens.css  01-base.css  10-layout.css  20-toolbar.css  30-editor.css  40-candidates.css  50-guide-debug.css  90-responsive.css
config/: data_paths.toml
crates/core/: Cargo.toml  README.md  build.rs
crates/core/src/: lib.rs  segment_refine.rs
crates/core/src/composer/: mod.rs
crates/core/src/decoder/: config.rs  legacy.rs  manager.rs  manual_character_typing.rs  mod.rs  observer.rs  types.rs  weighted_span.rs  wfst.rs
crates/core/src/roman_lookup/: compiled_io.rs  legacy_data.rs  mod.rs  normalization.rs  ranked_lexicon.rs  transliterator.rs  types.rs
crates/session/: Cargo.toml  README.md
crates/session/src/: ime_session.rs  lib.rs  nida_keymap.rs
data/: roman_lookup.csv  your_lexicon.csv
data/keymaps/: nida.url  nida.xml  nida_linux.csv
data/lexicon/chunks/: chunk_0001.csv  chunk_0002.csv  chunk_0003.csv  chunk_0004.csv  chunk_0005.csv  chunk_0006.csv  chunk_0007.csv  chunk_0008.csv  chunk_0009.csv  chunk_0010.csv  chunk_0011.csv  chunk_0012.csv  chunk_0013.csv  chunk_0014.csv  chunk_0015.csv  chunk_0016.csv  chunk_0017.csv  chunk_0018.csv  chunk_0019.csv  chunk_0020.csv  chunk_0021.csv  chunk_0022.csv  chunk_0023.csv  chunk_0024.csv  chunk_0025.csv  chunk_0026.csv  chunk_0027.csv  chunk_0028.csv  chunk_0029.csv  chunk_0030.csv  chunk_0031.csv  chunk_0032.csv  chunk_0033.csv
docs/: development.md  khpos_mechanism.md  lexicon_visualization.md  ubuntu_ibus.md
docs/architecture/: cross-platform-performance-patterns.md  updater.md
packaging/linux/deb/: control.in  postinst  postrm
packaging/windows/wix/: KhmerIME.wxs
scripts/: install_ibus_engine.sh  khmerime_ibus_engine.py  serve_web_phone.sh
scripts/data/lexicon/: apply_khmer_frequency.py  disable_duplicate_runtime_rows.py  manage_lexicon_chunks.py  replace_thomr_with_thor.py  sort_en_kh_csv.py
scripts/web/: build_download_page.py  build_release.sh  serve_phone.sh
site/download/: download-detect.js  index.html  site.config.json  styles.css
specs/: README.md
specs/tools/: lexicon-editor.md
src/: engine_registry.rs  lib.rs  main.rs  roman_lookup.rs
src/composer/: mod.rs
src/decoder/: config.rs  legacy.rs  manager.rs  manual_character_typing.rs  mod.rs  observer.rs  types.rs  wfst.rs
src/khmer/: mod.rs
src/roman_lookup/: compiled_io.rs  legacy_data.rs  mod.rs  ranked_lexicon.rs  search_index.rs  transliterator.rs  types.rs
src/ui/: editor.rs  platform.rs  shadow.rs  storage.rs
src/ui/components/: editor_card.rs  guide.rs  mod.rs  segment_preview.rs  toolbar.rs  workspace.rs
src/ui/editor/: candidate_pipeline.rs  commit_flow.rs  manual_flow.rs  segmented_flow.rs  state.rs  view_helpers.rs
tests/: conftest.py  decoder_golden.rs  test_ibus_candidate_render.py  test_ibus_component.py  test_ibus_mode_property.py  test_ibus_refinement.py  test_ibus_segment_preview.py  test_web_ui.py  test_windows_notepad_tsf.py
tests/golden/: README.md  decoder_wfst_suggest.txt
tools/lexicon-editor/: server.py
tools/lexicon-editor/static/: app.js  index.html  style.css
