[workspace]
members = [
  ".",
  "crates/core",
  "crates/session",
  "adapters/linux-ibus",
  "adapters/macos-imk",
  "adapters/windows-tsf",
  "adapters/ios-keyboard",
  "adapters/android-ime",
  "apps/dioxus-app",
  "apps/lookup-cli",
]
default-members = [
  ".",
  "crates/core",
  "crates/session",
  "adapters/linux-ibus",
  "apps/dioxus-app",
  "apps/lookup-cli",
]
resolver = "2"

[package]
name = "roman_lookup"
version = "0.1.0"
edition = "2021"
autobins = false

[features]
default = []
wfst-decoder = ["khmerime_core/wfst-decoder"]
fetch-data = ["khmerime_core/fetch-data"]
cli = []

[dependencies]
khmerime_core = { path = "crates/core" }
khmerime_session = { path = "crates/session" }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
incremental = false
