[package]
name = "khmerime_windows_tsf"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
khmerime_core = { path = "../../crates/core" }
khmerime_session = { path = "../../crates/session" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "implement",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Registry",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_TextServices",
  "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.58"
