[package]
name = "khmerime_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
wfst-decoder = []
fetch-data = []

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["console", "Performance", "Window"] }
wasm-bindgen-futures = "0.4"
